--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,11 @@
   "name": "backend",
   "version": "0.1.0",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql": "^2.17.1"
+  },
+  "devDependencies": {
+    "cross-env": "^6.0.3",
+    "jest": "^24.9.0"
   }
 }
