--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
+  "devDependencies": {
+    "jest": "^24.9.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
