--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "packages/*"
   ],
   "scripts": {
-    "lint": "eslint **/*.{js,jsx} --ext .js",
+    "lint": "eslint --ext .js ./packages/frontend ./packages/backend",
     "lint-fix": "eslint **/*.{js,jsx} --ext .js --fix",
     "precommit": "npm run lint && pretty-quick --staged"
   },
@@ -23,8 +23,10 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^3.1.0",
