--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "packages/*"
   ],
   "scripts": {
-    "lint": "eslint --ext .js ./packages/frontend ./packages/backend",
-    "lint-fix": "eslint **/*.{js,jsx} --ext .js --fix",
+    "build": "babel packages --out-dir lib",
+    "build-watch": "babel packages --watch --out-dir lib",
+    "lint": "./scripts/lint.sh",
     "precommit": "npm run lint && pretty-quick --staged"
   },
   "devDependencies": {
@@ -21,17 +22,8 @@
     "@babel/preset-react": "^7.7.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
-    "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1"
   },
   "dependencies": {
