--- a/packages/frontend/.eslintrc.json
+++ b/packages/frontend/.eslintrc.json
@@ -1,8 +1,7 @@
 {
   "env": {
     "browser": true,
-    "es6": true,
-    "node": true
+    "es6": true
   },
   "extends": ["plugin:react/recommended", "airbnb", "prettier"],
   "globals": {
@@ -18,6 +17,7 @@
   },
   "plugins": ["react", "prettier"],
   "rules": {
+    "react/jsx-filename-extension": 0,
     "prettier/prettier": ["error"]
   }
 }
