--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,13 +10,24 @@
     "react-scripts": "3.3.0"
   },
   "devDependencies": {
-    "jest": "^24.9.0"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "jest": "^24.9.0",
+    "prettier": "^1.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .js .",
+    "lint-fix": "eslint --ext .js . --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
