--- a/packages/backend/.eslintrc.json
+++ b/packages/backend/.eslintrc.json
@@ -1,19 +1,10 @@
 {
-  "env": {
-    "commonjs": true,
-    "es6": true,
-    "node": true
-  },
-  "extends": ["airbnb", "prettier"],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
-  "parserOptions": {
-    "ecmaVersion": 2018
-  },
-  "plugins": ["prettier"],
-  "rules": {
-    "prettier/prettier": ["error"]
+  "settings": {
+    "import/resolver": {
+      "babel-module": {
+        "src": "./src",
+        "tests": "./__tests__"
+      }
+    }
   }
 }
