--- a/packages/frontend/.eslintrc.json
+++ b/packages/frontend/.eslintrc.json
@@ -1,23 +1,10 @@
 {
-  "env": {
-    "browser": true,
-    "es6": true
-  },
-  "extends": ["plugin:react/recommended", "airbnb", "prettier"],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 2018,
-    "sourceType": "module"
-  },
-  "plugins": ["react", "prettier"],
-  "rules": {
-    "react/jsx-filename-extension": 0,
-    "prettier/prettier": ["error"]
+  "settings": {
+    "import/resolver": {
+      "babel-module": {
+        "src": "./src",
+        "tests": "./__tests__"
+      }
+    }
   }
 }
