--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -10,6 +10,7 @@
     "mysql": "^2.17.1"
   },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^4.0.0",
     "cross-env": "^6.0.3",
     "jest": "^24.9.0",
     "eslint-import-resolver-babel-module": "^5.1.0",
