--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "babel packages --out-dir lib",
     "build-watch": "babel packages --watch --out-dir lib",
     "lint": "./scripts/lint.sh",
-    "precommit": "npm run lint && pretty-quick --staged"
+    "precommit": "npm run lint && pretty-quick --staged",
+    "test": "jest packages"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
@@ -20,6 +21,9 @@
     "@babel/plugin-proposal-pipeline-operator": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.9.0",
@@ -30,6 +34,7 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^3.1.0",
+    "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1"
   },
