--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "0.1.0",
   "scripts": {
-    "start": "node src/start.js",
+    "start": "nodemon src/start.js",
     "lint": "eslint --ext .js .",
     "lint-fix": "eslint --ext .js . --fix",
     "test": "jest"
@@ -14,9 +14,10 @@
   "devDependencies": {
     "babel-plugin-module-resolver": "^4.0.0",
     "cross-env": "^6.0.3",
-    "jest": "^24.9.0",
     "eslint-import-resolver-babel-module": "^5.1.0",
-    "eslint-plugin-import": "^2.19.1"
+    "eslint-plugin-import": "^2.19.1",
+    "jest": "^24.9.0",
+    "nodemon": "^2.0.2"
   },
   "jest": {
     "testEnvironment": "node"
