--- a/packages/frontend/jsconfig.json
+++ b/packages/frontend/jsconfig.json
@@ -2,8 +2,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "src": ["./src"],
-      "tests": ["__tests__"]
+      "src/*": ["src/*"],
+      "tests/*": ["src/__tests__/*"],
+      "components/*": ["src/components/*"],
+      "constants/*": ["src/constants/*"],
+      "containers/*": ["src/containers/*"]
     }
   }
 }
