add alias and hot loader

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,17 +14,21 @@
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^4.0.0",
+    "customize-cra": "^0.9.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.3",
     "eslint-import-resolver-babel-module": "^5.1.0",
     "eslint-plugin-import": "^2.19.1",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "react-app-rewire-hot-loader": "^2.0.1",
+    "react-app-rewired": "^2.1.5",
+    "react-hot-loader": "^4.12.18"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js .",
     "lint-fix": "eslint --ext .js . --fix"
