--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -8,8 +8,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql": "^2.17.1"
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.3"
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^4.0.0",
