backend start with sequelize and koa

--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -4,7 +4,10 @@
     "paths": {
       "src/*": ["src/*"],
       "tests/*": ["src/__tests__/*"],
-      "database/*": ["src/database/*"]
+      "database/*": ["src/database/*"],
+      "server/*": ["src/server/*"],
+      "controllers/*": ["src/server/controllers/*"],
+      "routes/*": ["src/server/routes/*"]
     },
     "allowJs": true
   }
