--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "koa": "^2.11.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.3"
   },
