connect frontend and backend

--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -7,7 +7,8 @@
       "database/*": ["src/database/*"],
       "server/*": ["src/server/*"],
       "controllers/*": ["src/server/controllers/*"],
-      "routes/*": ["src/server/routes/*"]
+      "routes/*": ["src/server/routes/*"],
+      "keys/*": ["keys/*"]
     },
     "allowJs": true
   }
